--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
     display: flex;
+    align-items: center;
     flex-direction: column;
-    
-
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
