--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,15 +1,32 @@
 nav {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   background-color: rgb(46, 46, 70);
   box-shadow: 0px 1px 3px black;
   font-family: "Lucida Console";
   color: white;
-  padding: 1rem 2%;
+  width: 100%;
 }
 
-button {
+h1 {
+  background-image: linear-gradient(
+    to left,
+    violet,
+    blueviolet,
+    aqua,
+    lightgreen,
+    yellow,
+    orange,
+    crimson
+  );
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
+nav button {
   color: white;
   background-color: transparent;
   border: none;
@@ -19,10 +36,10 @@ button {
   margin: 1rem 1.5rem;
 }
 
-button:hover {
+nav button:hover {
   color: cornflowerblue;
 }
 
-button:focus {
+nav button:focus {
   color: lightpink;
 }
