--- a/src/components/ArrayBar/ArrayBar.css
+++ b/src/components/ArrayBar/ArrayBar.css
@@ -4,6 +4,7 @@
   width: 2rem;
   margin: 0 2px;
   box-shadow: 2px 1px 2px black;
+  transition: height 0.2s ease-in;
 }
 
 @media (max-width: 800) {
