--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -26,7 +26,7 @@ h1 {
   color: transparent;
 }
 
-nav button {
+.nav-btn {
   color: white;
   background-color: transparent;
   border: none;
@@ -36,10 +36,10 @@ nav button {
   margin: 1rem 1.5rem;
 }
 
-nav button:hover {
+.nav-btn:hover {
   color: cornflowerblue;
 }
 
-nav button:focus {
+.nav-btn:focus {
   color: lightpink;
 }
