--- a/src/containers/Array/Array.css
+++ b/src/containers/Array/Array.css
@@ -1,4 +1,5 @@
 .array {
     display: grid;
-    grid-template-columns: repeat(30, 1fr);
+    grid-template-columns: repeat(10, 1fr);
+    grid-gap: 0.25rem;
 }
