--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -2,11 +2,13 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  background-color: rgb(46, 46, 70);
+  background-color: rgb(54, 54, 54);
   box-shadow: 0px 1px 3px black;
   font-family: "Lucida Console";
+  font-size: 1.25rem;
   color: white;
   width: 100%;
+  height: 4rem;
 }
 
 h1 {
@@ -40,6 +42,12 @@ h1 {
   color: cornflowerblue;
 }
 
-.nav-btn:focus {
+.selected-btn {
   color: lightpink;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-family: "Lucida Console";
+  font-size: 1.25rem;
+  margin: 1rem 1.5rem;
 }
