--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,25 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 16px;
+}
+@media (max-width: 1000px) {
+  html { font-size: 14px; }
+}
+@media (max-width: 400px) {
+  html { font-size: 12px; }
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(80, 80, 80);
 }
 
 code {
