minor code clean up and reformatting

--- a/src/components/ArrayBar/ArrayBar.css
+++ b/src/components/ArrayBar/ArrayBar.css
@@ -1,7 +1,7 @@
 .bar {
   display: inline-block;
   width: 4rem;
-  margin: 0 2px;
+  margin: 1px 2px;
   box-shadow: 0 0 2px 1px black;
   transition: height 0.1s ease-in;
   border-top: 1px solid rgb(54, 54, 54);
