--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -9,6 +9,8 @@ nav {
   color: white;
   width: 100%;
   height: 4rem;
+  overflow: auto;
+  white-space: nowrap;
 }
 
 h1 {
@@ -50,4 +52,42 @@ h1 {
   font-family: "Lucida Console";
   font-size: 1.25rem;
   margin: 1rem 1.5rem;
+}
+
+.speed-label {
+  margin: 1rem 1.5rem;
+}
+
+@media screen and (max-width: 1100px) {
+  h1 {
+    display: none;
+  }
+
+  .nav-btn {
+    font-size: 1rem;
+    margin: 1rem 0.5rem;
+  }
+
+  .selected-btn {
+    font-size: 1rem;
+    margin: 1rem 0.5rem;
+  }
+
+  .speed-label {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .nav-btn {
+    font-size: 0.75rem;
+  }
+
+  .selected-btn {
+    font-size: 0.75rem;
+  }
+
+  .speed-label {
+    font-size: 0.75rem;
+  }
 }
